--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+    <!-- - - - - - - - - - - Hajy's Part - - - - - - - - - - -->
+
+    <!-- - - - - - - - - - - Nigar's Part - - - - - - - - - - -->
+
+    <!-- - - - - - - - - - - Mina's Part - - - - - - - - - - -->
+
+    <!-- - - - - - - - - - - Vons's Part - - - - - - - - - - -->
+
     
 </body>
 </html>
