--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 <body>
 
     <!-- - - - - - - - - - - Hajy's Part - - - - - - - - - - -->
+    <div class="heading">
 
+        <div class="back-photo">
+            <img src="/img/image 2.png" alt="background">
+        </div>
+        
+        <div class="alq-img">
+            <img src="/img/Group 636.png" alt="Alqoritmika">
+        </div>
+
+    </div>
     <!-- - - - - - - - - - - Nigar's Part - - - - - - - - - - -->
 
     <!-- - - - - - - - - - - Mina's Part - - - - - - - - - - -->
