--- a/index.html
+++ b/index.html
@@ -12,12 +12,36 @@
     <!-- - - - - - - - - - - Hajy's Part - - - - - - - - - - -->
     <div class="heading">
 
-        <div class="back-photo">
-            <img src="/img/image 2.png" alt="background">
+        <div class="photosOfMain">
+
+            <div class="back-photo">
+                <img src="/img/Rectangle2.png" alt="background">
+                <img src="/img/Rectangle994.png" alt="background">
+            </div> 
+
+        <div class="head-part">
+            
+            <div class="alq-img">
+                <img src="/img/Group636.png" alt="Alqoritmika">
+            </div>
+
+            <div class="alq-3line">
+                <img src="/img/Group1189.png" alt="Settings">
+            </div>
         </div>
-        
-        <div class="alq-img">
-            <img src="/img/Group 636.png" alt="Alqoritmika">
+
+        </div>
+
+        <div class="students-div">
+
+            <h1 class="studentsh1"> Tələbələr üçün <br>
+            IT-kurslar</h1>
+
+        </div>
+        <div class="stutendsp">
+            <p>
+                Web developer və Sistem Administratorluğu təhsilini vermək üçün Azərbaycan Dövlət Neft və Sənaye Universitetinin tələbələrini yığırıq. Tələb görən peşəyə bilet əldə etmək istərdinmi?
+            </p>
         </div>
 
     </div>
