--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <!-- - - - - - - - - - - Hajy's Part - - - - - - - - - - -->
 
     <!-- - - - - - - - - - - Nigar's Part - - - - - - - - - - -->
-
+        <div>
+            
+        </div>
     <!-- - - - - - - - - - - Mina's Part - - - - - - - - - - -->
 
     <!-- - - - - - - - - - - Vons's Part - - - - - - - - - - -->
