--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!-- - - - - - - - - - - Hajy's Part - - - - - - - - - - -->
+    <!-- - - - - - - - - - - haJy's Part - - - - - - - - - - -->
     <div class="heading">
 
         <div class="photosOfMain">
@@ -45,7 +45,7 @@
         </div>
 
     </div>
-    <!-- - - - - - - - - - - Nigar's Part - - - - - - - - - - -->
+    <!-- - - - - - - - - - - nJga's Part - - - - - - - - - - -->
 
     <!-- - - - - - - - - - - Mina's Part - - - - - - - - - - -->
 
