--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
 
         <div class="photosOfMain">
 
-            <div class="back-photo">
-                <img src="/img/Rectangle2.png" alt="background">
+            <div class="back-photo1">
                 <img src="/img/Rectangle994.png" alt="background">
             </div> 
+            
+            <div class="back-photo2"> 
+                <img src="/img/Rectangle2.png" alt="background">
+            </div>
 
         <div class="head-part">
             
