--- a/index.html
+++ b/index.html
@@ -16,7 +16,65 @@
     <!-- - - - - - - - - - - Mina's Part - - - - - - - - - - -->
 
     <!-- - - - - - - - - - - Vons's Part - - - - - - - - - - -->
+    <div class="block-5">
+        <div class="wrapper">
+            <div class="sistem">
+                <h2 class="title1">SİSTEM ADMİNİSTRATORU</h2>
+                <h2 class="title2">Kurs seçin</h2>
+                <div class="choice">
+                    <div class="option">SİSTEM ADMİNİSTRATORU</div>
+                    <div class="arrowdown"></div>
+                </div>
+                <div class="text">
 
+                    <div class="text-inner">
+                        <img src="img/star.svg" alt="star">
+                        <p>Proqram və aparat təminatının quraşdırılması, yığılması və xidməti üzrə bütün baza məsələlərinin həlli üçün biliklər əldə edəcəksən. </p>
+                    </div>
+
+                    <div class="text-inner">
+                        <img src="img/star.svg" alt="star">
+                        <p>Həftədə 5-6 gün, hər gün 3 saat olmaqla məşğələlər</p>
+                    </div>
+
+                    <div class="text-inner">
+                        <img src="img/star.svg" alt="star">
+                        <p>Fərdi müştərilərin və kiçik biznesin məsələləri ilə işləməyi öyrənəcəksən</p>
+                    </div>
+
+                    <div class="text-inner">
+                        <img src="img/star.svg" alt="star">
+                        <p>Sən junior-sistem administratoru kimi işləyə biləcəksən</p>
+                    </div>
+                </div>
+                <div class="button">
+                    <button class="btn">Kursun proqramı</button>
+                </div>
+            </div>
+            <div class="web">
+                <h2>web developer</h2>
+                <div class="text">
+                    <p>Aşağıdakı texnologiyaların stekini praktiki olaraq mənimsəyəcəksən: HTML, CSS, JavaScript, React, NodeJS, MySQL, Git.</p>
+                    <p>Həftədə 5 gün, hər gün 4 saat olmaqla məşğələlər.</p>
+                    <p>Portfolioda 5 şəxsi layihə.</p>
+                    <p>Sən junior-frontend dizayner kimi işləyə biləcəksən.</p>
+                </div>
+                <div class="button">
+                    <button class="btn">Kursun proqramı</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="block-6">
+        <div class="wrapper">
+            <h2>İŞTİRAK ÜÇÜN ŞƏRTLƏR</h2> 
+            <p>Əgər sən Azərbaycan Dövlət Neft və Sənaye Universitetinin tələbəsisənsə, təhsil almaq üçün ərizə ilə müraciət edə bilərsən.<br> ​3 vəya 4-cü kurslarda oxuyursan.</p>
+            <div class="image">
+                <img src="img/block6.png" alt="block6">
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
