--- a/index.html
+++ b/index.html
@@ -9,6 +9,48 @@
   </head>
   <body>
 
+    <!-- - - - - - - - - - - haJy's Part - - - - - - - - - - -->
+    <div class="heading">
+        <!-- <div>
+            <img class="backgroundPurple" src="/img/Rectangle1218.png" alt="">
+        </div> -->
+
+        <div class="photosOfMain">
+
+            <!-- <div class="back-photo">
+                <img class="back2" src="/img/Rectangle2.png" alt="background">
+                <img class="back1" src="/img/Rectangle994.png" alt="background">
+            </div>   -->
+
+        <div class="head-part">
+            
+            <div class="alq-img">
+                <img src="/img/Group636.png" alt="Alqoritmika">
+            </div>
+
+            <div class="alq-3line">
+                <img src="/img/Group1189.png" alt="Settings">
+            </div>
+        </div>
+
+        </div>
+
+        <div class="h1_div">
+
+
+            <h1 class="students_h1"> Tələbələr üçün <br>
+            IT-kurslar</h1>
+        
+        </div>
+
+        <div class="studentsp">
+            <p>
+                Web developer və Sistem Administratorluğu təhsilini vermək üçün Azərbaycan Dövlət Neft və Sənaye Universitetinin tələbələrini yığırıq. Tələb görən peşəyə bilet əldə etmək istərdinmi?
+            </p>
+        </div>
+
+    </div>
+
     <div class="block-3">
       <div class="wrapper">
         <div class="part-1">
