--- a/index.html
+++ b/index.html
@@ -9,43 +9,44 @@
 </head>
 <body>
 
-    <!-- - - - - - - - - - - Hajy's Part - - - - - - - - - - -->
-    <div class="heading">
 
-        <div class="photosOfMain">
-
-            <div class="back-photo">
-                <img src="/img/Rectangle2.png" alt="background">
-                <img src="/img/Rectangle994.png" alt="background">
-            </div> 
-
-        <div class="head-part">
-            
-            <div class="alq-img">
-                <img src="/img/Group636.png" alt="Alqoritmika">
-            </div>
-
-            <div class="alq-3line">
-                <img src="/img/Group1189.png" alt="Settings">
-            </div>
-        </div>
-
-        </div>
-
-        <div class="students-div">
-
-            <h1 class="studentsh1"> Tələbələr üçün <br>
-            IT-kurslar</h1>
-
-        </div>
-        <div class="stutendsp">
-            <p>
-                Web developer və Sistem Administratorluğu təhsilini vermək üçün Azərbaycan Dövlət Neft və Sənaye Universitetinin tələbələrini yığırıq. Tələb görən peşəyə bilet əldə etmək istərdinmi?
-            </p>
-        </div>
+    <!-- - - - - - - - - - - Nigar's Part - - - - - - - - - - -->
+    <div class="rectangle">
 
     </div>
-    <!-- - - - - - - - - - - Nigar's Part - - - - - - - - - - -->
+    <div class="big">
+        <div class="fline">      
+            <p class="pline">
+            NƏ ƏLDƏ EDƏCƏKSƏN?
+            </p>
+            <div class="pink">
+                <p>Anketi doldurun</p>
+            </div>
+        </div>
+        <div class="sline">
+        <div class="roketin">
+            <img src="Group 7841.png">
+            <p>
+                Junior səviyyəsində IT peşə
+            </p>
+            <p>
+                Sənin üçün əlavə bir IT peşəsi. Proqramı bitirdikdən sonra kursun ixtisası üzrə işə düzəlməyin üçün kifayət edəcək hard və soft bacarıqların olacaqdır.      
+            </p>
+        </div>
+        <div class="cap">
+            <img src="Vector.png">
+            <p>
+                Universitetdəki profil fənlər üzrə məqbul qiymət
+            </p>
+            <p>
+                Kursun müvəffəqiyyətlə başa vurulması istehsalat təcrübəsinin keçirilməsi kimi yaxud ikinci semestr proqramının profil fənləri kimi qəbul ediləcəkdir.
+            </p>
+        </div>
+        <div class="pinkm">
+            <p>Anketi doldurun</p>
+        </div>
+        </div>
+    </div>
     
     <!-- - - - - - - - - - - Mina's Part - - - - - - - - - - -->
 
