--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Phoenix </title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,11 +13,13 @@
     <div class="heading">
 
       <div class="photosOfMain">
-
-          <!-- <div class="back-photo">
+          
+         <div class="back-photo">
+              <img class="backpurple" src="/img/Rectangle1218.png" alt="purple">
+              <img class="mainback" src="/img/image2.png" alt="background">
               <img class="back2" src="/img/Rectangle2.png" alt="background">
               <img class="back1" src="/img/Rectangle994.png" alt="background">
-          </div>   -->
+          </div>  
 
       <div class="head-part">
           
