--- a/index.html
+++ b/index.html
@@ -61,6 +61,44 @@
       </div>
 
   </div>
+  <!-- Nigar -->
+  <div class="rectangle">
+
+  </div>
+  <div class="big">
+      <div class="fline">      
+          <p class="pline">
+          NƏ ƏLDƏ EDƏCƏKSƏN?
+          </p>
+          <div class="pink">
+              <p>Anketi doldurun</p>
+          </div>
+      </div>
+      <div class="sline">
+      <div class="roketin">
+          <img src="/img/Group7841.png">
+          <p>
+              Junior səviyyəsində IT peşə
+          </p>
+          <p>
+              Sənin üçün əlavə bir IT peşəsi. Proqramı bitirdikdən sonra kursun ixtisası üzrə işə düzəlməyin üçün kifayət edəcək hard və soft bacarıqların olacaqdır.      
+          </p>
+      </div>
+      <div class="cap">
+          <img src="/img/Vector.png">
+          <p>
+              Universitetdəki profil fənlər üzrə məqbul qiymət
+          </p>
+          <p>
+              Kursun müvəffəqiyyətlə başa vurulması istehsalat təcrübəsinin keçirilməsi kimi yaxud ikinci semestr proqramının profil fənləri kimi qəbul ediləcəkdir.
+          </p>
+      </div>
+      <div class="pinkm">
+          <p>Anketi doldurun</p>
+      </div>
+      </div>
+  </div>
+  <!-- Nigar end -->
     <div class="block-3">
         <div class="wrapper">
           <div class="part-1">
