--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
           </div>  
 
       <div class="head-part">
-          
+          <div class="right__side">   
+            <p>
+              #codeforcuture 
+            </p>
+            <p class="num" >
+              +99 (470) 201-11-79
+            </p>
+          </div>
           <div class="alq-img">
               <img src="/img/Group636.png" alt="Alqoritmika">
           </div>
