--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <img class="mainback" src="/img/image2.png" alt="background">
               <img class="back2" src="/img/Rectangle2.png" alt="background">
               <img class="back1" src="/img/Rectangle994.png" alt="background">
+              <img class="pcback" src="/img/Group7838.png" alt="background"> 
           </div>  
 
       <div class="head-part">
@@ -65,6 +66,7 @@
       <div class="logosofadnsu">  
         <img src="/img/Group7837.png" alt="ADNSU">
         <img src="/img/Group7817.png" alt="nazirlik">
+        <img src="/img/Group7817pc.png" alt="nazirlik">
       </div>
 
   </div>
