--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </div>
 
           <div class="alq-3line">
-              <img src="/img/Group1189.png" alt="Settings">
+              <img src="./img/Group1189.png" alt="Settings">
           </div>
       </div>
 
