--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <div class="photosOfMain">
           
          <div class="back-photo">
-              <img class="backpurple" src="/img/Rectangle1218.png" alt="purple">
-              <img class="mainback" src="/img/image2.png" alt="background">
-              <img class="back2" src="/img/Rectangle2.png" alt="background">
-              <img class="back1" src="/img/Rectangle994.png" alt="background">
-              <img class="pcback" src="/img/Group7838.png" alt="background"> 
+              <img class="backpurple" src="./img/Rectangle1218.png" alt="purple">
+              <img class="mainback" src="./img/image2.png" alt="background">
+              <img class="back2" src="./img/Rectangle2.png" alt="background">
+              <img class="back1" src="./img/Rectangle994.png" alt="background">
+              <img class="pcback" src="./img/Group7838.png" alt="background"> 
           </div>  
 
       <div class="head-part">
@@ -32,7 +32,7 @@
             </p>
           </div>
           <div class="alq-img">
-              <img src="/img/Group636.png" alt="Alqoritmika">
+              <img src="./img/Group636.png" alt="Alqoritmika">
           </div>
 
           <div class="alq-3line">
@@ -61,12 +61,12 @@
         </p>
       </div>
       <div>
-        <img class="vector806" src="/img/Vector806.png" alt="">
+        <img class="vector806" src="./img/Vector806.png" alt="">
       </div>
       <div class="logosofadnsu">  
-        <img src="/img/Group7837.png" alt="ADNSU">
-        <img src="/img/Group7817.png" alt="nazirlik">
-        <img src="/img/Group7817pc.png" alt="nazirlik">
+        <img src="./img/Group7837.png" alt="ADNSU">
+        <img src="./img/Group7817.png" alt="nazirlik">
+        <img src="./img/Group7817pc.png" alt="nazirlik">
       </div>
 
   </div>
