--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       </div>
       <div class="sline">
       <div class="roketin">
-          <img src="/img/Group7841.png">
+          <img src="./img/Group7841.png">
           <p>
               Junior səviyyəsində IT peşə
           </p>
@@ -94,7 +94,7 @@
           </p>
       </div>
       <div class="cap">
-          <img src="/img/Vector.png">
+          <img src="./img/Vector.png">
           <p>
               Universitetdəki profil fənlər üzrə məqbul qiymət
           </p>
